changed to "No Code Signing"

--- a/Coo-e/Base.lproj/Main.storyboard
+++ b/Coo-e/Base.lproj/Main.storyboard
@@ -1226,21 +1226,33 @@
                                 <rect key="frame" x="279" y="464" width="40" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="thumb's_up"/>
+                                <connections>
+                                    <action selector="when_LikeDislike:" destination="Eei-tp-iix" eventType="touchUpInside" id="cAS-DB-WMh"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zuT-Ju-VMe">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zuT-Ju-VMe">
                                 <rect key="frame" x="325" y="466" width="40" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="thumb's_down"/>
+                                <connections>
+                                    <action selector="when_LikeDislike:" destination="Eei-tp-iix" eventType="touchUpInside" id="d6J-6d-b24"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Cr-3C-Q1T">
                                 <rect key="frame" x="280" y="544" width="40" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="thumb's_up"/>
+                                <connections>
+                                    <action selector="where_LikeDislike:" destination="Eei-tp-iix" eventType="touchUpInside" id="ahz-Qe-O5j"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSt-eq-F1h">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tSt-eq-F1h">
                                 <rect key="frame" x="326" y="546" width="40" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="thumb's_down"/>
+                                <connections>
+                                    <action selector="where_LikeDislike:" destination="Eei-tp-iix" eventType="touchUpInside" id="LFO-6f-iEa"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LU9-ZG-h19">
                                 <rect key="frame" x="288" y="499" width="24" height="22"/>
